# voxels

./: CMakeLists.txt  README.md  build.sh  helpers.h  main.cpp  program.h  rebuild.bash  syntax_rules.txt
headers/: camera.h  frustrum.h  generation.h  helpers.h  shader.h
shaders/: crosshair_vertex.glsl  fragment.glsl  vertex.glsl
src/: main.cpp
